# ultravox

./: .gitignore  Cargo.toml
mock_ultravox/: main.py
server/: Cargo.toml
server/src/: main.rs  system_prompt.txt
ultravox/inference/: infer.py
ultravox/tools/: gradio_demo.py
