[workspace]
members = [
    "server",
    "common",
]
resolver = "2"


[workspace.dependencies]
http = "1.0.0"
thiserror = "2.0"
tokio = { version = "1.34", features = ["full"]  }
derive_more = { version = "1.0.0", features = ["full"] }
tracing = "0.1.40"
serde = { version = "1.0", features = ["derive"] }
